# lyca

./: .gitignore  7426c9e3.md  LICENSE  README.md  default.profraw  f3c0102e.md  pyproject.toml  skills.md
lyca/: __init__.py  core.py  fit.py
nbs/: 00_core.ipynb  01_fit.ipynb  _quarto.yml
tests/: conftest.py  test_core.py  test_fit.py
